--- a/index.html
+++ b/index.html
@@ -9,16 +9,49 @@
 		padding: 0;
 		margin: 0;
 	}
+	body{
+		background: url('5-13050GS111.gif');
+	}
 	ul{
 		list-style: none;
 	}
 	a{
 		text-decoration: none;
+		color: #4DD2FF;
 	}
+	.box{
+			text-align: center;
+			width: 1000px;
+			margin-right: auto;
+			margin-left: auto;
+		}
+	h1{
+			font-weight: normal;
+			font-size: 30px;
+			color: #4DD2FF;
+		}
+		ul{
+			width: 1000px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+		ul li{
+			line-height: 60px;
+			font-size: 26px;
+		}
 </style>
 <body>
+	<div class="box">
+		<h1>网页位置</h1></div>
 	<ul>
-		<li><a href=""></a></li>
+		<li><a href="https://xk888666.github.io/zuoye/tuwenpaiban/360/1.html" target="_blank">360</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/tuwenpaiban/lianxi.psd/2.html" target="_blank">练习.psd</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/tuwenpaiban/fenye/3.html" target="_blank">分页</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/fudonglianxi/tudou/4.html" target="_blank">土豆</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/fudonglianxi/jingchengwangshi/5.html" target="_blank">京城往事1(28).fw</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/fudonglianxi/360meiti/6.html" target="_blank">360媒体</a></li>
+		<li><a href="https://xk888666.github.io/zuoye/fudonglianxi/rumengling/7.html" target="_blank">如梦令</a></li>
 	</ul>
+
 </body>
 </html>
