--- a/fudonglianxi/tudou/4.html
+++ b/fudonglianxi/tudou/4.html
@@ -71,7 +71,7 @@
 			bottom: 0;
 			font-style: normal;
 			background: url('images/土豆beijing.png');
-			color: #FFFFFF;
+			color: #fff;
 			width: 35px;
 			height: 18px;
 			line-height: 18px;
