--- a/tuwenpaiban/fenye/3.html
+++ b/tuwenpaiban/fenye/3.html
@@ -4,32 +4,25 @@
 	<meta charset="UTF-8">
 	<title>分页</title>
 	<style >
-		*{
-			padding: 0;
-			margin: 0;
+		a{
 			text-decoration: none;
-			font-weight: bold;
 		}
 		.box{
-			width: 374px;
-			margin: 5px auto;
-			font-size: 0;
+			text-align: center;
 		}
 		a{
 			width: 32px;
 			height: 32px;
 			line-height: 32px;
 			text-align: center;
-			margin-right: 2px;
 			background: #3A9BD9;
 			color: #fff;
 			display: inline-block;
 			font-size: 10px;
 			vertical-align: middle;
+			font-weight: bold;
+			font-family: 微软雅黑;
 
-		}
-		a{
-			color: #fff;
 		}
 		.act{
 			background: #595454;
@@ -40,13 +33,14 @@
 		}
 		.a2{
 			background: url('images/xiayiye.png');
+
 		}
 	</style>
 </head>
 <body>
 	<div class="box">
 	      <a href="###" class="a1"></a>
-	      <a href="###">&#x3C</a>
+	      <a href="###">&lt;</a>
 	      <a href="###">1</a>
 	      <a href="###">2</a>
 	      <a href="###" class="act">3</a>
@@ -54,7 +48,7 @@
 	      <a href="###">5</a>
 	      <a href="###">6</a>
 	      <a href="###">7</a>
-				<a href="###">&#x3E;</a>
+				<a href="###">&gt;</a>
 				<a href="###" class="a2"></a>
 	</div>
 </body>
